[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icinganalysis"
version = "0.0.1"
authors = [
  { name="Donald Cook", email="icinganalysis@proton.me" },
]
description = "Package for analysis of aircraft icing conditions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/icinganalysis/icinganalysis.github.io"
